lab1/golang_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang-app
  ports:
    - name: http
      port: 80
      targetPort: 8083
  type: ClusterIP
